--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
     </header>
     <main>
         <section class="promo">
-            <img class="right" src="img/3DICON1.png" alt="3DICON1">
+            <div class="right">
+                <img src="img/3DICON1.png" alt="3DICON1">
+            </div>
             <div class="container">
                 <div class="promo__wrap">
                     <div class="promo__info">
@@ -116,7 +118,9 @@
                     </div>
                 </div>
             </div>
-            <img class="left" src="img/3DICON2.png" alt="3DICON2">
+            <div class="left">
+                <img src="img/3DICON2.png" alt="3DICON2">
+            </div>
         </section>
         <section class="greeting">
             <div class="container">
