Правки, подключил шрифтры

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="СИБИРСКИЙ ИНСТИТУТ ПРАКТИЧЕСКОЙ ПСИХОЛОГИИ,ПЕДАГОГИКИ И СОЦИАЛЬНОЙ РАБОТЫ" /">
     <title>siberTest</title>
+    <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
